cluster/apps/networking/traefik/external/unraid/hosting/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: hosting
  namespace: external
subsets:
  - addresses:
      - ip: 192.168.102.84
    ports:
      - name: default
        port: 443
        protocol: TCP
