cluster/apps/networking/traefik/external/unraid/hosting/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: clouds
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-secured-chain@kubernetescrd
  name: hosting
  namespace: external
spec:
  ingressClassName: traefik
  rules:
    - host: "${SECRET_HOSTING_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: hosting
                port:
                  number: 443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "${SECRET_HOSTING_DOMAIN}"
      secretName: hosting-tls
